# diversify

./: .gitignore  .pre-commit-config.yaml  API_toket.py  README.md  app.py  b3_links.json  dados.db  main.py  pyproject.toml  requirements.txt  tabela_tratada_clean.csv  teste.py
banco_dados/: banco_de_dados.db  conexao_bd.py  consultas_bd.py  estrutura.md  gerenciador.py  gerenciamento_bd.py  gerenciamento_db.py  operacoes.py  teste.py
dados/: banco_de_dados.db  database_teste.csv  patrimonio.csv  tabela_income.csv
dashboard/: app.py  callbacks.py  graficos.py  layouts.py  main_content.py
data/: IBOV.csv  IBRA.csv  IDIV.csv  IFIX.csv  SMLL.csv  data_types.json  data_types.py  database.db  files.json  filters.json  income_wege.csv  info.md  sources.json  tables.json
database/: db_manager.py  teste.py
diversify/: __init__.py  b3_index.py  b3_services.py  carteira.py  config_log.py  database.py  empresa.py  empresas.py  github_api.py  main.py  models.py  quotes_services.py  repositories.py  services.py
etl/: etl_manager.py  extractor.py  loader.py  transformer.py
etl_tradinview/: coletor.py  dados_teste.py  dataloader.py  empresas.py  integrator.py  raspador.py  refiner.py  teste.py
etl_yahoo/: extractor.py  manager.py  transformer.py
plotly_dash/: app.py  callbacks.py  layouts.py
processed_data/: FIAGROS_composition.json  FIINFRAS_composition.json  IBOV_composition.json  IBRA_composition.json  IDIV_composition.json  IFIX_composition.json  INDEX_composition.json  SMLL_composition.json
scrapping/: coletor.py  dados_teste.py  empresas.py  fontes.py  (+5 more)
(+88 files in other folders)
