[tool.poetry]
name = "diversify"
version = "0.1.0"
description = ""
authors = ["Max Lemes <maxvlemes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
plotly = "^6.0.0"
dash = "^2.18.2"
dash-bootstrap-components = "^1.7.1"
selenium = "^4.28.1"
webdriver-manager = "^4.0.2"
yfinance = "^0.2.54"
click = "8.0.4"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
